--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "vuepress": "^1.5.2",
+    "vuepress-plugin-code-copy": "^1.0.6",
+    "vuepress-plugin-copyright": "^1.0.2",
+    "vuepress-plugin-medium-zoom": "^1.1.8",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
